--- a/topic/liberationWar.html
+++ b/topic/liberationWar.html
@@ -9,6 +9,30 @@
     <title>Liberation War</title>
 </head>
 <body>
-    <h2>কোনো কাজ করা হয় নি।</h2>
+    <div class="container">
+        <div class="banner">
+            <img src="../media/liberationWar.jpg" alt="Viva Preparation">
+        </div>
+        <div class="heading">
+            <h1>মুক্তিযুদ্ধ</h1><hr>
+        </div>
+            <h2>ষষ্ঠ শ্রেণি</h2>
+            <embed src="../media/pdf/Bangladesh_History_Six.pdf" width="100%" height="600px"/><hr>
+            <h2>সপ্তম শ্রেণি</h2>
+            <embed src="../media/pdf/Bangladesh_Liberation_War_Seven.pdf" width="100%" height="600px"/><hr>
+            <h2>অষ্টম শ্রেণি</h2>
+            <embed src="../media/pdf/Bangladesh_Liberation_War_Eight.pdf" width="100%" height="600px"/><hr>
+            <h2>অষ্টম শ্রেণি</h2>
+            <embed src="../media/pdf/Colonial_Age_Bangla_Liberation_War_Eight.pdf" width="100%" height="600px"/><hr>
+            <h2>নবম শ্রেণি</h2>
+            <embed src="../media/pdf/Movement_Nationalism_Nine.pdf" width="100%" height="600px"/><hr>
+            <h2>নবম শ্রেণি</h2>
+            <embed src="../media/pdf/Independent_Bangladesh_Nine.pdf" width="100%" height="600px"/>
+
+        <div class="footer">
+            <hr>
+            <p>&copy; আমি শামীম সরকার। এই সাইটের কোনো রকম কপিরাইট নেই।</p>
+        </div>
+    </div>
 </body>
 </html>
