--- a/topic/liberationWar.html
+++ b/topic/liberationWar.html
@@ -17,17 +17,17 @@
             <h1>মুক্তিযুদ্ধ</h1><hr>
         </div>
             <h2>ষষ্ঠ শ্রেণি</h2>
-            <embed src="../media/pdf/Bangladesh_History_Six.pdf" width="100%" height="600px"/><hr>
+            <object data="../media/pdf/Bangladesh_History_Six.pdf" width="100%" height="600px"></object><hr>
             <h2>সপ্তম শ্রেণি</h2>
-            <embed src="../media/pdf/Bangladesh_Liberation_War_Seven.pdf" width="100%" height="600px"/><hr>
+            <object data="../media/pdf/Bangladesh_Liberation_War_Seven.pdf" width="100%" height="600px"></object><hr>
             <h2>অষ্টম শ্রেণি</h2>
-            <embed src="../media/pdf/Bangladesh_Liberation_War_Eight.pdf" width="100%" height="600px"/><hr>
+            <object data="../media/pdf/Bangladesh_Liberation_War_Eight.pdf" width="100%" height="600px"></object><hr>
             <h2>অষ্টম শ্রেণি</h2>
-            <embed src="../media/pdf/Colonial_Age_Bangla_Liberation_War_Eight.pdf" width="100%" height="600px"/><hr>
+            <object data="../media/pdf/Colonial_Age_Bangla_Liberation_War_Eight.pdf" width="100%" height="600px"></object><hr>
             <h2>নবম শ্রেণি</h2>
-            <embed src="../media/pdf/Movement_Nationalism_Nine.pdf" width="100%" height="600px"/><hr>
+            <object data="../media/pdf/Movement_Nationalism_Nine.pdf" width="100%" height="600px"></object><hr>
             <h2>নবম শ্রেণি</h2>
-            <embed src="../media/pdf/Independent_Bangladesh_Nine.pdf" width="100%" height="600px"/>
+            <object data="../media/pdf/Independent_Bangladesh_Nine.pdf" width="100%" height="600px"></object>
 
         <div class="footer">
             <hr>
