working with file system

--- a/topic/liberationWar.html
+++ b/topic/liberationWar.html
@@ -17,8 +17,9 @@
             <h1>মুক্তিযুদ্ধ</h1><hr>
         </div>
             <h2>ষষ্ঠ শ্রেণি</h2>
-            <object data="../media/pdf/Bangladesh_History_Six.pdf" width="100%" height="600px"></object><hr>
-            <h2>সপ্তম শ্রেণি</h2>
+            <!-- <object data="../media/pdf/Bangladesh_History_Six.pdf" width="100%" height="600px"></object><hr> -->
+            <a href="../media/pdf/Bangladesh_History_Six.pdf">Click Me!</a>
+            <!-- <h2>সপ্তম শ্রেণি</h2>
             <object data="../media/pdf/Bangladesh_Liberation_War_Seven.pdf" width="100%" height="600px"></object><hr>
             <h2>অষ্টম শ্রেণি</h2>
             <object data="../media/pdf/Bangladesh_Liberation_War_Eight.pdf" width="100%" height="600px"></object><hr>
@@ -27,7 +28,7 @@
             <h2>নবম শ্রেণি</h2>
             <object data="../media/pdf/Movement_Nationalism_Nine.pdf" width="100%" height="600px"></object><hr>
             <h2>নবম শ্রেণি</h2>
-            <object data="../media/pdf/Independent_Bangladesh_Nine.pdf" width="100%" height="600px"></object>
+            <object data="../media/pdf/Independent_Bangladesh_Nine.pdf" width="100%" height="600px"></object> -->
 
         <div class="footer">
             <hr>
