--- a/topic/liberationWar.html
+++ b/topic/liberationWar.html
@@ -18,7 +18,7 @@
         </div>
             <h2>ষষ্ঠ শ্রেণি</h2>
             <!-- <object data="../media/pdf/Bangladesh_History_Six.pdf" width="100%" height="600px"></object><hr> -->
-            <a href="../media/pdf/Bangladesh_History_Six.pdf">Click Me!</a>
+            <iframe src="../media/pdf/Bangladesh_History_Six.pdf" frameborder="0" width="100%" height="500px"></iframe>
             <!-- <h2>সপ্তম শ্রেণি</h2>
             <object data="../media/pdf/Bangladesh_Liberation_War_Seven.pdf" width="100%" height="600px"></object><hr>
             <h2>অষ্টম শ্রেণি</h2>
