--- a/topic/liberationWar.html
+++ b/topic/liberationWar.html
@@ -17,18 +17,18 @@
             <h1>মুক্তিযুদ্ধ</h1><hr>
         </div>
             <h2>ষষ্ঠ শ্রেণি</h2>
-            <!-- <object data="../media/pdf/Bangladesh_History_Six.pdf" width="100%" height="600px"></object><hr> -->
-            <iframe src="../media/pdf/Bangladesh_History_Six.pdf" frameborder="0" width="100%" height="500px"></iframe>
-            <!-- <h2>সপ্তম শ্রেণি</h2>
-            <object data="../media/pdf/Bangladesh_Liberation_War_Seven.pdf" width="100%" height="600px"></object><hr>
-            <h2>অষ্টম শ্রেণি</h2>
-            <object data="../media/pdf/Bangladesh_Liberation_War_Eight.pdf" width="100%" height="600px"></object><hr>
-            <h2>অষ্টম শ্রেণি</h2>
-            <object data="../media/pdf/Colonial_Age_Bangla_Liberation_War_Eight.pdf" width="100%" height="600px"></object><hr>
-            <h2>নবম শ্রেণি</h2>
-            <object data="../media/pdf/Movement_Nationalism_Nine.pdf" width="100%" height="600px"></object><hr>
-            <h2>নবম শ্রেণি</h2>
-            <object data="../media/pdf/Independent_Bangladesh_Nine.pdf" width="100%" height="600px"></object> -->
+            <div class="image">
+                <img src="../media/six/Bangladesh_History_Six_page-0001.jpg" alt="page 1">
+                <img src="../media/six/Bangladesh_History_Six_page-0002.jpg" alt="page 2">
+                <img src="../media/six/Bangladesh_History_Six_page-0003.jpg" alt="page 3">
+                <img src="../media/six/Bangladesh_History_Six_page-0004.jpg" alt="page 4">
+                <img src="../media/six/Bangladesh_History_Six_page-0005.jpg" alt="page 5">
+                <img src="../media/six/Bangladesh_History_Six_page-0006.jpg" alt="page 6">
+                <img src="../media/six/Bangladesh_History_Six_page-0007.jpg" alt="page 7">
+                <img src="../media/six/Bangladesh_History_Six_page-0008.jpg" alt="page 8">
+                <img src="../media/six/Bangladesh_History_Six_page-0009.jpg" alt="page 9">
+                <img src="../media/six/Bangladesh_History_Six_page-0010.jpg" alt="page 10">
+            </div>
 
         <div class="footer">
             <hr>
