work with accordion

--- a/topic/liberationWar.html
+++ b/topic/liberationWar.html
@@ -16,50 +16,138 @@
         <div class="heading">
             <h1>মুক্তিযুদ্ধ</h1>
         </div>
-            <div class="navlink">
+
+        <button class="accordion">বাংলাদেশের ইতিহাস - ষষ্ঠ শ্রেণি</button>
+        <div class="panel">
+            <img src="../media/six/Bangladesh_History_Six_page-0001-min.jpg" alt="">
+            <img src="../media/six/Bangladesh_History_Six_page-0002-min.jpg" alt="">
+            <img src="../media/six/Bangladesh_History_Six_page-0003-min.jpg" alt="">
+            <img src="../media/six/Bangladesh_History_Six_page-0004-min.jpg" alt="">
+            <img src="../media/six/Bangladesh_History_Six_page-0005-min.jpg" alt="">
+            <img src="../media/six/Bangladesh_History_Six_page-0006-min.jpg" alt="">
+            <img src="../media/six/Bangladesh_History_Six_page-0007-min.jpg" alt="">
+            <img src="../media/six/Bangladesh_History_Six_page-0008-min.jpg" alt="">
+            <img src="../media/six/Bangladesh_History_Six_page-0009-min.jpg" alt="">
+            <img src="../media/six/Bangladesh_History_Six_page-0010-min.jpg" alt="">
+        </div>
+
+        <button class="accordion">বাংলাদেশের স্বাধীনতা সংগ্রাম - সপ্তম শ্রেণি</button>
+        <div class="panel">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0001-min.jpg" alt="">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0002-min.jpg" alt="">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0003-min.jpg" alt="">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0004-min.jpg" alt="">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0005-min.jpg" alt="">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0006-min.jpg" alt="">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0007-min.jpg" alt="">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0008-min.jpg" alt="">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0009-min.jpg" alt="">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0010-min.jpg" alt="">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0011-min.jpg" alt="">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0012-min.jpg" alt="">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0013-min.jpg" alt="">
+            <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0014-min.jpg" alt="">
+        </div>
+
+        <button class="accordion">ঔপনিবেশিক যুগ ও বাংলার স্বাধীনতা - অষ্টম শ্রেণি</button>
+        <div class="panel">
+            <img src="../media/eight/Colonial_Age_Bangla_Liberation_War_Eight_page-0001-min.jpg" alt="">
+            <img src="../media/eight/Colonial_Age_Bangla_Liberation_War_Eight_page-0002-min.jpg" alt="">
+            <img src="../media/eight/Colonial_Age_Bangla_Liberation_War_Eight_page-0003-min.jpg" alt="">
+            <img src="../media/eight/Colonial_Age_Bangla_Liberation_War_Eight_page-0004-min.jpg" alt="">
+            <img src="../media/eight/Colonial_Age_Bangla_Liberation_War_Eight_page-0005-min.jpg" alt="">
+            <img src="../media/eight/Colonial_Age_Bangla_Liberation_War_Eight_page-0006-min.jpg" alt="">
+            <img src="../media/eight/Colonial_Age_Bangla_Liberation_War_Eight_page-0007-min.jpg" alt="">
+            <img src="../media/eight/Colonial_Age_Bangla_Liberation_War_Eight_page-0008-min.jpg" alt="">
+            <img src="../media/eight/Colonial_Age_Bangla_Liberation_War_Eight_page-0009-min.jpg" alt="">
+            <img src="../media/eight/Colonial_Age_Bangla_Liberation_War_Eight_page-0010-min.jpg" alt="">
+            <img src="../media/eight/Colonial_Age_Bangla_Liberation_War_Eight_page-0011-min.jpg" alt="">
+        </div>
+
+        <button class="accordion">বাংলাদেশের মুক্তিযুদ্ধ - অষ্টম শ্রেণি</button>
+        <div class="panel">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0001-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0002-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0003-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0004-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0005-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0006-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0007-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0008-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0009-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0010-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0011-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0012-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0013-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0014-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0015-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0016-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0017-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0018-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0019-min.jpg" alt="">
+            <img src="../media/eight/Bangladesh_Liberation_War_Eight_page-0020-min.jpg" alt="">
+        </div>
+
+        <button class="accordion">পূর্ব বাংলার আন্দোলন ও জাতীয়তাবাদের উত্থান - নবম শ্রেণি</button>
+        <div class="panel">
+            <img src="../media/nine/Movement_Nationalism_Nine_page-0001-min.jpg" alt="">
+            <img src="../media/nine/Movement_Nationalism_Nine_page-0002-min.jpg" alt="">
+            <img src="../media/nine/Movement_Nationalism_Nine_page-0003-min.jpg" alt="">
+            <img src="../media/nine/Movement_Nationalism_Nine_page-0004-min.jpg" alt="">
+            <img src="../media/nine/Movement_Nationalism_Nine_page-0005-min.jpg" alt="">
+            <img src="../media/nine/Movement_Nationalism_Nine_page-0006-min.jpg" alt="">
+            <img src="../media/nine/Movement_Nationalism_Nine_page-0007-min.jpg" alt="">
+            <img src="../media/nine/Movement_Nationalism_Nine_page-0008-min.jpg" alt="">
+            <img src="../media/nine/Movement_Nationalism_Nine_page-0009-min.jpg" alt="">
+            <img src="../media/nine/Movement_Nationalism_Nine_page-0010-min.jpg" alt="">
+            <img src="../media/nine/Movement_Nationalism_Nine_page-0011-min.jpg" alt="">
+        </div>
+
+        <button class="accordion">স্বাধীন বাংলাদেশ - নবম শ্রেণি</button>
+        <div class="panel">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0001-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0002-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0003-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0004-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0005-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0006-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0007-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0008-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0009-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0010-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0011-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0012-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0013-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0014-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0015-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0016-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0017-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0018-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0019-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0020-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0021-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0022-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0023-min.jpg" alt="">
+            <img src="../media/nine/Independent_Bangladesh_Nine_page-0024-min.jpg" alt="">
+        </div>
+
+        <button class="accordion" style="font-size:large; font-weight: bold;">Download Zone for Offline Reading</button>
+            <div class="panel">
                 <ul>
-                    <li><a href="#six">বাংলাদেশের ইতিহাস - ষষ্ঠ শ্রেণি</a></li>
-                    <li><a href="#seven">বাংলাদেশের স্বাধীনতা সংগ্রাম - সপ্তম শ্রেণি</a></li>
-                    <li><a href="">ঔপনিবেশিক যুগ ও বাংলার স্বাধীনতা - অষ্টম শ্রেণি</a></li>
-                    <li><a href="">বাংলাদেশের মুক্তিযুদ্ধ - অষ্টম শ্রেণি</a></li>
-                    <li><a href="">পূর্ব বাংলার আন্দোলন ও জাতীয়তাবাদের উত্থান - নবম শ্রেণি</a></li>
-                    <li><a href="">স্বাধীন বাংলাদেশ - নবম শ্রেণি</a></li>
+                    <li><a href="../media/six/Bangladesh_History_Six.pdf">বাংলাদেশের ইতিহাস - ষষ্ঠ শ্রেণি</a></li>
+                    <li><a href="../media/seven/Bangladesh_Liberation_War_Seven.pdf">বাংলাদেশের স্বাধীনতা সংগ্রাম - সপ্তম শ্রেণি</a></li>
+                    <li><a href="../media/eight/Colonial_Age_Bangla_Liberation_War_Eight.pdf">ঔপনিবেশিক যুগ ও বাংলার স্বাধীনতা - অষ্টম শ্রেণি</a></li>
+                    <li><a href="../media/eight/Bangladesh_Liberation_War_Eight.pdf">বাংলাদেশের মুক্তিযুদ্ধ - অষ্টম শ্রেণি</a></li>
+                    <li><a href="../media/nine/Movement_Nationalism_Nine.pdf">পূর্ব বাংলার আন্দোলন ও জাতীয়তাবাদের উত্থান - নবম শ্রেণি</a></li>
+                    <li><a href="../media/nine/Independent_Bangladesh_Nine.pdf">স্বাধীন বাংলাদেশ - নবম শ্রেণি</a></li>
                 </ul>
             </div>
-            <div class="image" id="six">
-                <img src="../media/six/Bangladesh_History_Six_page-0001-min.jpg" alt="">
-                <img src="../media/six/Bangladesh_History_Six_page-0002-min.jpg" alt="">
-                <img src="../media/six/Bangladesh_History_Six_page-0003-min.jpg" alt="">
-                <img src="../media/six/Bangladesh_History_Six_page-0004-min.jpg" alt="">
-                <img src="../media/six/Bangladesh_History_Six_page-0005-min.jpg" alt="">
-                <img src="../media/six/Bangladesh_History_Six_page-0006-min.jpg" alt="">
-                <img src="../media/six/Bangladesh_History_Six_page-0007-min.jpg" alt="">
-                <img src="../media/six/Bangladesh_History_Six_page-0008-min.jpg" alt="">
-                <img src="../media/six/Bangladesh_History_Six_page-0009-min.jpg" alt="">
-                <img src="../media/six/Bangladesh_History_Six_page-0010-min.jpg" alt="">
-            </div>
-
-            <div class="image" id="seven">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0001-min.jpg" alt="">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0002-min.jpg" alt="">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0003-min.jpg" alt="">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0004-min.jpg" alt="">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0005-min.jpg" alt="">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0006-min.jpg" alt="">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0007-min.jpg" alt="">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0008-min.jpg" alt="">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0009-min.jpg" alt="">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0010-min.jpg" alt="">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0011-min.jpg" alt="">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0012-min.jpg" alt="">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0013-min.jpg" alt="">
-                <img src="../media/seven/Bangladesh_Liberation_War_Seven_page-0014-min.jpg" alt="">
-            </div>
-
         <div class="footer">
             <hr>
             <p>&copy; আমি শামীম সরকার। এই সাইটের কোনো রকম কপিরাইট নেই।</p>
         </div>
     </div>
+
+    <script src="../src/script.js"></script>
 </body>
 </html>
