modify index page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
             <div>
                 <a href="./topic/recentIssue.html">সাম্প্রতিক</a>
             </div>
+            <div>
+                <a href="./topic/admin.html">প্রশাসন</a>
+            </div>
+            <div>
+                <a href="./topic/police.html">পুলিশ</a>
+            </div>
+            <div>
+                <a href="./topic/others.html">অন্যান্য</a>
+            </div>
         </div>
         <div class="footer">
             <hr>
